--- a/main.css
+++ b/main.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 .wrapper {
   width: 100%;
   height: 100vh;
@@ -33,7 +37,7 @@
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 460px;
+  max-width: 450px;
 }
 
 .field {
