--- a/main.scss
+++ b/main.scss
@@ -3,6 +3,10 @@
    margin: 0;
    box-sizing: border-box;
 }
+body {
+   overflow: hidden;
+
+}
 .wrapper {
    width: 100%;
    height: 100vh;
@@ -17,7 +21,7 @@
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
-   max-width: 460px;
+   max-width: 450px;
 }
 .field {
    padding: 0;
