--- a/main.scss
+++ b/main.scss
@@ -9,12 +9,13 @@ body {
 }
 button {
    appearance: none;
-   background-color: rgb(72, 97, 235);
+   background-color: rgb(228, 230, 245);
    border: 2px solid black;
    border-radius: .4em;
    width: 80px;
    transition: all .8s ease-in-out;
    font-family: 'Smokum', cursive;
+   font-weight: bold;
 }
 button:hover {
 background-color: rgb(59, 231, 36);
@@ -49,7 +50,7 @@ background-color: rgb(59, 231, 36);
    z-index: 1;
    padding: 1em;
    border-radius: .5em;
-   width: 60%;
+   width: 40%;
    gap: 1em;
    display: flex;
    // display: none;
@@ -80,7 +81,6 @@ background-color: rgb(59, 231, 36);
    }
 }
 .result_ronaldo {
-   visibility: hidden;
    position: absolute;
    z-index: 1;
    padding: 1em;
@@ -99,8 +99,25 @@ background-color: rgb(59, 231, 36);
       height: auto;
    }
 }
-
-
+.result_draw {
+   position: absolute;
+   z-index: 1;
+   padding: 1em;
+   border-radius: .5em;
+   background-color: rgba(255, 255, 255, 0.637);
+   display: flex;
+   display: none;
+   flex-direction: column;
+   gap: 1em;
+   align-items: center;
+   justify-content: center;
+   
+   .img {
+      content: url(img/giani.png);
+      width: 150px;
+      height: auto;
+   }
+}
 
 .gameboard {
    padding: 0;
@@ -118,8 +135,9 @@ background-color: rgb(59, 231, 36);
       position: absolute;
       display: flex;
       gap: 10px;
-      top: 15px;
-      left: 40px;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
 
          .current_player_messi {
             content: url(img/messi.png);
